--- a/my-first-pipeline/Jenkinsfile
+++ b/my-first-pipeline/Jenkinsfile
@@ -1,19 +1,20 @@
 pipeline {
   agent none
   stages {
-    stage('Back-end') {
+    stage('Build and compile java program') {
       agent {
         docker { image 'maven:3.8.1-adoptopenjdk-11' }
       }
       steps {
-        sh 'mvn --version'
+        sh 'mvn clean install'
+	sh 'compile'
       }
     }
     stage('Front-end') {
-      agent {
+       agent {
         docker { image 'node:16-alpine' }
       }
-      steps {
+       steps {
         sh 'node --version'
       }
     }
