--- a/my-first-pipeline/Jenkinsfile
+++ b/my-first-pipeline/Jenkinsfile
@@ -1,20 +1,20 @@
+
 pipeline {
   agent none
   stages {
-    stage('Build and compile java program') {
+    stage('Back-end') {
       agent {
         docker { image 'maven:3.8.1-adoptopenjdk-11' }
       }
       steps {
-        sh 'mvn clean install'
-	sh 'compile'
+        sh 'mvn --version'
       }
     }
     stage('Front-end') {
-       agent {
+      agent {
         docker { image 'node:16-alpine' }
       }
-       steps {
+      steps {
         sh 'node --version'
       }
     }
