added code to compile java file

--- a/my-first-pipeline/Jenkinsfile
+++ b/my-first-pipeline/Jenkinsfile
@@ -4,10 +4,11 @@ pipeline {
   stages {
     stage('Back-end') {
       agent {
-        docker { image 'maven:3.8.1-adoptopenjdk-11' }
+        docker { image 'openjdk:11' }
       }
       steps {
-        sh 'mvn --version'
+        sh 'javac HelloJenkins.java'
+        sh 'java HelloJenkins'
       }
     }
     stage('Front-end') {
