--- a/my-first-pipeline/Jenkinsfile
+++ b/my-first-pipeline/Jenkinsfile
@@ -8,6 +8,7 @@ pipeline {
       }
       steps {
         sh 'java --version'
+        sh 'docker run -it ranniuser/hellojenkins:v1'
       }
     }
     stage('Front-end') {
